--- a/Layout/MainLayout.razor
+++ b/Layout/MainLayout.razor
@@ -1,5 +1,5 @@
 @inherits LayoutComponentBase
 
-<div class="container mx-auto px-4 py-8">
+<div class="min-h-screen flex flex-col items-center justify-start">
     @Body
 </div>
